[package]
authors = ["kolen <incredible.angst@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "bluebar"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = { version = "0.6.10", features = ["device"] }
cortex-m-semihosting = "0.3.3"
stm32f1xx-hal = { version = "0.5.2", features = ["stm32f103", "rt"] }
panic-semihosting = "0.5.3"
cortex-m-rtfm = "0.5.1"
bme280 = "0.1.2"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.3.5"

# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.

# this lets you use `cargo fix`!
[[bin]]
name = "bluebar"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
opt-level = "s"
lto = true
