[package]
name = "logging_node"
version = "0.1.0"
authors = ["kolen <incredible.angst@gmail.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.2"
log = "0.4.0"
env_logger = "0.6.2"
chrono = "0.4"
diesel = { version = "1.4.2", features = ["sqlite", "chrono"] }
dotenv = "0.14.1"
failure = "0.1.5"
