[package]
name = "logging_node"
version = "0.1.0"
authors = ["kolen <incredible.angst@gmail.com>"]
edition = "2018"
default-run = "logging_node"

[dependencies]
byteorder = "1.3.4"
log = "0.4.12"
env_logger = "0.8.2"
chrono = "0.4"
diesel = { version = "1.4.6", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
failure = "0.1.8"
